# gbemu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  alloc.c  cart.c  cpu.c  dma.c  gb.c  gbemu.h  input.c  main.c  mem.c  ppu.c  sdl.c  serial.c  tim.c  utils.c
include/: gbemu.h
include/gbemu/: errors.h
src/: log.c  log.h  types.h
src/ext/: bus.h  cart.c  cart.h  ext_bus.c  mem.h  vid_bus.c
src/soc/: cpu.c  cpu_common.h  dma.c  joypad.c  ppu.c  soc.c  soc.h  timer.c
src/soc/instr/: aritm.c  bits.c  flow.c  instrs.c  instrs.h  isr.c  ld.c  misc.c
